sanity. blocks broken

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@sanity/client": "^2.16.0",
+    "@sanity/image-url": "^1.0.1",
     "@vue/apollo-option": "^4.0.0-alpha.11",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -15,6 +17,7 @@
     "core-js": "^3.6.5",
     "graphql": "^15.5.0",
     "register-service-worker": "^1.7.1",
+    "sanity-blocks-vue-component": "^1.0.1",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-chartjs": "^3.5.1",
