add images and components

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 .DS_Store
 node_modules
 /dist
-
+public/assets/
+/public/assets/
+/public 
+**/*.png 
+**/*.svg
+.png 
+.svg
 
 # local env files
 .env.local
