--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "graphql": "^15.5.0",
     "register-service-worker": "^1.7.1",
     "sanity-blocks-vue-component": "^1.0.1",
+    "storyblok-js-client": "^4.1.4",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-chartjs": "^3.5.1",
@@ -36,6 +37,7 @@
     "node-sass": "^4.12.0",
     "postcss": "^7.0.35",
     "sass-loader": "^8.0.2",
+    "storyblok-vue": "^1.0.5",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.4",
     "vue-cli-plugin-apollo": "~0.22.2",
     "vue-template-compiler": "^2.6.11"
