--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^2.16.0",
     "@sanity/image-url": "^1.0.1",
     "@vue/apollo-option": "^4.0.0-alpha.11",
