--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
     "vue-chartjs": "^3.5.1",
+    "vue-gtag": "^1.16.1",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
