--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@sanity/block-content-to-html": "^2.0.0",
     "@sanity/client": "^2.16.0",
     "@sanity/image-url": "^1.0.1",
+    "@tailwindcss/forms": "^0.3.3",
     "@vue/apollo-option": "^4.0.0-alpha.11",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
