--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^2.9.4",
     "core-js": "^3.6.5",
     "graphql": "^15.5.0",
+    "prerender-spa-plugin": "^3.4.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
